Infrastructure/templates/nexus_template.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: ${GUID}-nexus
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: nexus3
    name: nexus3
    namespace: ${GUID}-nexus
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: nexus3
      deploymentconfig: nexus3
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: nexus3
          deploymentconfig: nexus3
      spec:
        containers:
        - image: docker.io/sonatype/nexus3:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nexus3
          ports:
          - containerPort: 8081
            protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 2Gi
              cpu: 2
            requests:
              memory: 1Gi
              cpu: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /nexus-data
            name: nexus3-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: nexus3-volume-1
          persistentVolumeClaim:
            claimName: nexus-pvc
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - nexus3
        from:
          kind: ImageStreamTag
          name: nexus3:latest
          namespace: ${GUID}-nexus
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 2
    labels:
      app: nexus3
    name: nexus3
    namespace: ${GUID}-nexus
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: docker.io/sonatype/nexus3:latest
      from:
        kind: DockerImage
        name: sonatype/nexus3:latest
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: docker-registry.default.svc:5000/${GUID}-nexus/nexus3
    tags:
    - conditions:
      - generation: 2
        lastTransitionTime: 2018-07-20T07:43:19Z
        message: dockerimage.image.openshift.io "docker-registry.default.svc:5000/${GUID}-assignment/nexus3:latest"
          not found
        reason: NotFound
        status: "False"
        type: ImportSuccess
      items: null
      tag: latest
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: nexus3
    name: nexus3
    namespace: ${GUID}-nexus
  spec:
    port:
      targetPort: 8081-tcp
    to:
      kind: Service
      name: nexus3
      weight: 100
    wildcardPolicy: None

- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: nexus3
    name: nexus3
    namespace: ${GUID}-nexus
  spec:
    clusterIP: 172.30.34.17
    ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
    selector:
      app: nexus3
      deploymentconfig: nexus3
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: nexus-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      limits:
        storage: 4Gi
      requests:
        storage: 4Gi
parameters:
  - displayName: GUID
    name: GUID
    required: true
