Infrastructure/templates/parksmap_prod_template.yaml
apiVersion: v1
items:
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    labels:
      app: parksmap
    name: parksmap-blue
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: parksmap
      deploymentconfig: parksmap-blue
    strategy:
      activeDeadlineSeconds: 21600
      resources:
        requests:
          memory: 256Mi
          cpu: 100m
        limits:
          memory: 256Mi
          cpu: 100m
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 850
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: parksmap
          deploymentconfig: parksmap-blue
      spec:
        containers:
        - image: parksmap:0.0
          imagePullPolicy: Always
          name: parksmap
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/appname/
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/appname/
              port: 8080
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers: []
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    labels:
      app: parksmap
    name: parksmap-green
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: parksmap
      deploymentconfig: parksmap-green
    strategy:
      activeDeadlineSeconds: 21600
      resources:
        requests:
          memory: 256Mi
          cpu: 100m
        limits:
          memory: 256Mi
          cpu: 110m
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 850
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: parksmap
          deploymentconfig: parksmap-green
      spec:
        containers:
        - image: parksmap:0.0
          imagePullPolicy: Always
          name: parksmap
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/appname/
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/appname/
              port: 8080
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers: []
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: parksmap
    name: parksmap-blue
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: parksmap
      deploymentconfig: parksmap-blue
    sessionAffinity: None
    type: ClusterIP
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: parksmap
    name: parksmap-green
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: parksmap
      deploymentconfig: parksmap-green
    sessionAffinity: None
    type: ClusterIP
- kind: Route
  apiVersion: v1
  metadata:
    labels:
      app: parksmap
    name: parksmap
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: parksmap-green
      weight: 100
    wildcardPolicy: None
- kind: ImageStream
  apiVersion: v1
  metadata:
    labels:
      app: parksmap
    name: parksmap
  spec:
    lookupPolicy:
      local: false
kind: List
metadata: {}
